--- a/contacto.html
+++ b/contacto.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-
+    <!-- Navegador-->
     <section id="barra">
         <header>
             <div class="header_contenedor">
@@ -59,6 +59,7 @@
         </header>
     </section>
 
+    <!-- CONTACTO-->
     <section id="contacto">
 
         <div class="image">
